[gd_scene load_steps=9 format=2]

[ext_resource path="res://WorldSelect.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Renogare-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float color;

void fragment(){
	COLOR = vec4(0.0,0.0,1.0,0.0);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/color = null

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fonts/Renogare-Regular.otf"

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 2 )

[node name="SelectScreen" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
margin_right = 1282.0
margin_bottom = 720.0
color = Color( 0.286275, 0.286275, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Control" parent="."]
margin_right = 1282.0
margin_bottom = 720.0
theme = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forest" type="Control" parent="Select"]
margin_left = 912.0
margin_top = 224.0
margin_right = 1230.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unlocked" type="ColorRect" parent="Select/Forest"]
margin_left = -32.0
margin_top = -32.0
margin_right = 288.0
margin_bottom = 288.0
color = Color( 0.384314, 0.603922, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Locked" type="ColorRect" parent="Select/Forest"]
margin_left = -32.0
margin_top = -32.0
margin_right = 288.0
margin_bottom = 288.0
color = Color( 0.490196, 0.490196, 0.490196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forest" type="Button" parent="Select/Forest"]
material = SubResource( 3 )
margin_left = -32.0
margin_top = -32.0
margin_right = 288.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 5 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Select/Forest"]
margin_top = 88.0
margin_right = 259.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 144, 56 )
custom_fonts/font = SubResource( 6 )
text = "Beat Winter-5
to unlock!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winter" type="Control" parent="Select"]
margin_left = 514.0
margin_top = 224.0
margin_right = 832.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Select/Winter"]
margin_left = -34.0
margin_top = -32.0
margin_right = 286.0
margin_bottom = 288.0
color = Color( 0.341176, 0.498039, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Locked" type="ColorRect" parent="Select/Winter"]
margin_left = -34.0
margin_top = -32.0
margin_right = 286.0
margin_bottom = 288.0
color = Color( 0.490196, 0.490196, 0.490196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winter" type="Button" parent="Select/Winter"]
material = SubResource( 3 )
margin_left = -34.0
margin_top = -32.0
margin_right = 286.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 5 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Select/Winter"]
margin_left = -2.0
margin_top = 88.0
margin_right = 257.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 144, 56 )
custom_fonts/font = SubResource( 6 )
text = "Beat Desert-5
to unlock!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desert" type="Control" parent="Select"]
margin_left = 112.0
margin_top = 224.0
margin_right = 430.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Select/Desert"]
margin_left = -32.0
margin_top = -32.0
margin_right = 288.0
margin_bottom = 288.0
color = Color( 0.603922, 0.407843, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Locked" type="ColorRect" parent="Select/Desert"]
margin_left = -32.0
margin_top = -32.0
margin_right = 288.0
margin_bottom = 288.0
color = Color( 0.490196, 0.490196, 0.490196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desert" type="Button" parent="Select/Desert"]
material = SubResource( 3 )
margin_left = -32.0
margin_top = -32.0
margin_right = 288.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 5 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Select/Desert"]
visible = false
margin_top = 88.0
margin_right = 262.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 144, 56 )
custom_fonts/font = SubResource( 6 )
text = "Unlocked
by default."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Select/Forest/Forest" to="Select" method="_on_Forest_pressed"]
[connection signal="pressed" from="Select/Winter/Winter" to="Select" method="_on_Winter_pressed"]
[connection signal="pressed" from="Select/Desert/Desert" to="Select" method="_on_Desert_pressed"]
